--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
 		}
 	],
 	"require": {
-		"php": ">=7.2",
+		"php": "^8.0",
 		"nesbot/carbon": "~2.0"
 	},
 	"autoload": {
@@ -19,8 +19,8 @@
 		}
 	},
 	"require-dev": {
-		"mockery/mockery": "^1.0@dev",
-		"phpunit/phpunit": "~8.0"
+		"mockery/mockery": "^1.3",
+		"phpunit/phpunit": "^9.0"
 	},
 	"config": {
 		"sort-packages": true
